# rain

./: .envrc  Cargo.toml  flake.nix  rustfmt.toml
migrations/: 20240827033334_init.sql  20240830200225_rename-meteo-table-to-historical-forecast.sql
src/: api_models.rs  app_data.rs  db_models.rs  main.rs  models.rs  new_location_form.rs  queries.rs  style.css  views.rs
src/screens/: location_list.rs  mod.rs  new_location_form.rs  today_view.rs
