[package]
name = "rain2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["std", "backtrace"] }
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
geohash = "0.13.1"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde = { version = "1.0.208", features = ["derive", "serde_derive"] }
serde_json = "1.0.126"
surf = "2.3.2"
vizia = { git = "https://github.com/vizia/vizia", features = [
  "wayland",
  "clipboard",
  "embedded_fonts",
  "winit",
] }
